--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title></title>
+<title>MEDIA DIET</title>
 <main></main>
 <script src="/bundle.js"></script>
 <link rel="stylesheet" href="/bundle.css" />
