Add reset button, tweet button

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <title>MEDIA DIET</title>
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
 <main></main>
 <script src="/bundle.js"></script>
 <link rel="stylesheet" href="/bundle.css" />
