Added like functionality

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <title>MEDIA DIET</title>
+
+<meta name="description" content="MEDIA DIET: Create your own mixed media mixtapes.">
+  <meta property="og:title" content="MEDIA DIET 💽">
+  <meta property="og:description" content="Create your own mixed media mixtapes.">
+  <meta property="og:image" content="/mediadiet_logo.png">
+  <meta property="og:image:alt" content="Mediadiet Logo">
+  <meta property="og:locale" content="de_DE">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:url" content="https://mediadiet.herokuapp.com">
+  <link rel="canonical" href="https://mediadiet.herokuapp.com">
 <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
